<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_main">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10sp"
                        android:text="Inspiring Stories"
                        android:textColor="@color/textColor"
                        android:textSize="18sp" />

                    <LinearLayout
                        android:id="@+id/linearblogs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/viewBlogs"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingRight="5sp"
                            android:text="View All"
                            android:textColor="@color/colorPrimary"
                            android:textSize="14sp" />

                        <ImageView
                            android:layout_width="20sp"
                            android:layout_height="20sp"
                            android:src="@drawable/icons8_next_page_40" />
                    </LinearLayout>
                </RelativeLayout>

                <android.support.v4.widget.SwipeRefreshLayout
                    android:id="@+id/refreshcontainer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:ignore="MergeRootFrame">


                </android.support.v4.widget.SwipeRefreshLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerview1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <!--<android.support.v7.widget.RecyclerView-->
                <!--android:id="@+id/storyRecycler"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"/>-->
            </LinearLayout>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                app:cardBackgroundColor="@color/greyBg"
                app:cardCornerRadius="10sp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="10sp"
                        android:paddingTop="10sp"
                        android:paddingEnd="10sp"
                        android:text="@string/groups_nearby"
                        android:textSize="18sp" />


                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/groupsRecycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="5sp" />

                    <android.support.v7.widget.GridLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:columnCount="2"
                        app:orientation="horizontal"
                        app:rowCount="1">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/textColor"
                            android:gravity="center"
                            android:padding="5sp"
                            android:text="@string/create_group"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            app:layout_column="0"
                            app:layout_columnWeight="1"
                            app:layout_gravity="fill_horizontal"
                            app:layout_row="0" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="5sp"
                            android:text="@string/view_more"
                            android:textSize="18sp"
                            app:layout_column="1"
                            app:layout_columnWeight="1"
                            app:layout_gravity="fill_horizontal"
                            app:layout_row="0" />

                    </android.support.v7.widget.GridLayout>
                </LinearLayout>


            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10sp"
                        android:text="Need Help? Ask Experts"
                        android:textColor="@color/textColor"
                        android:textSize="18sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingRight="5sp"
                            android:text="View All"
                            android:textColor="@color/colorPrimary"
                            android:textSize="14sp" />

                        <ImageView
                            android:layout_width="20sp"
                            android:layout_height="20sp"
                            android:src="@drawable/icons8_next_page_40" />
                    </LinearLayout>
                </RelativeLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/expertsRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp" />
            </LinearLayout>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                app:cardCornerRadius="8sp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/greyBg"
                    android:orientation="horizontal"
                    android:padding="5sp">

                    <ImageView
                        android:layout_width="30sp"
                        android:layout_height="30sp"
                        android:paddingRight="5sp"
                        android:src="@drawable/icons8_discussion_32" />

                    <TextView
                        android:id="@+id/groupchat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Involve Youself With Our Communnity" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:layout_marginBottom="5sp"
                app:cardCornerRadius="8sp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/greyBg"
                    android:orientation="horizontal"
                    android:padding="5sp">

                    <ImageView
                        android:layout_width="30sp"
                        android:layout_height="30sp"
                        android:paddingRight="5sp"
                        android:src="@drawable/icons8_euro_money_32" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Earn Money With Your Skill" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

    </ScrollView>


</LinearLayout>